--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 :root{
     --success-color: #2ecc71;
@@ -29,6 +30,8 @@ body {
 h2{
     text-align: center;
     margin: 0 0 20px;
+    font-family: 'Pacifico', cursive;
+    font-size: 40px;
 }
 
 .form {
@@ -96,6 +99,7 @@ h2{
     font-size: 16px;
     margin-top: 20px;
     cursor: pointer;
+    font-family: 'Pacifico', cursive;
 }
 
 .form button:hover{
